@@ -1,0 +1,13 @@
+bin/g-cpan
+ChangeLog
+lib/Gentoo.pm
+lib/Gentoo/CPAN.pm
+lib/Gentoo/Portage.pm
+lib/Gentoo/UI/Console.pm
+Makefile.PL
+MANIFEST			This list of files
+META.yml
+t/00Gentoo.t
+t/01config.t
+t/02ebuilds_read.t
+t/10cpan_packages.t
