@@ -1,0 +1,35 @@
+--- #YAML:1.0
+name:               g-cpan
+version:            0.16.3
+abstract:           Install modules from CPAN in a portage friendly way
+author:
+    - Michael Cummings <mcummings@gentoo.org>
+    - Robin H. Johnson <robbat2@gentoo.org>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    File::Basename:      0
+    File::Copy:          0
+    File::Find:          0
+    File::Path:          0
+    File::Spec:          0
+    IO::File:            0
+    Log::Agent:          0
+    Memoize:             0
+    Shell::EnvImporter:  0
+    Term::ANSIColor:     0
+    Test::More:          0
+    YAML:                0
+    YAML::Node:          0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
